Put the main app logo back above loading overlays so it doesn't look cut off (this was the real reason for the header z-index fix that was undone a commit or two ago.)

--- a/uclient/styles/main.scss
+++ b/uclient/styles/main.scss
@@ -65,6 +65,8 @@ main {
 }
 
 h1 {
+  position: relative;
+  z-index: 2;
   width: 274px; /* Fix cross-browser text-indent issues. */
   margin: 0;
   margin-top: .65em;
